# shortlink-be

./: .gitignore  Cargo.toml  config.yaml  key.pem
src/: main.rs
src/controllers/: link_controller.rs  mod.rs
