[package]
name = "short-link-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
regex = "1"
serde = { version = "1", features = ["derive"] }
deadpool-postgres = "0.10"
config = "0.13"
dotenv = "0.15"
uuid = { version = "1.3", features = ["v4"] }
serde_json = "1.0"